Support soft targets in magnitude pruning

--- a/mnist/magnitude-and-tt.ipynb
+++ b/mnist/magnitude-and-tt.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from IPython.display import display, clear_output\n",
@@ -97,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = MNISTModel()\n",
@@ -114,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = MNISTModel()\n",
@@ -126,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class MagnitudePrunningLayer(nn.Module):\n",
@@ -149,8 +157,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class SoftTargets:\n",
+    "  def __init__(self, loader, model):\n",
+    "    self.loader = loader\n",
+    "    self.model = model\n",
+    "    \n",
+    "  def __iter__(self):\n",
+    "    for x, _ in self.loader:\n",
+    "      yield x, nn.functional.softmax(self.model(x), -1)\n",
+    "  \n",
+    "  def __len__(self):\n",
+    "    return len(self.loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.layers[0] = MagnitudePrunningLayer(model.layers[0], 0.1)"
